--- a/stack.yaml
+++ b/stack.yaml
@@ -1,40 +1,23 @@
-
-# flags: {}
-
+flags: {}
 packages:
- - src/lvish/
- - src/par-classes/
- - src/par-collections/
- - src/par-collections/tests/
- - src/par-mergesort/
- - src/par-transformers/
- - deps/concurrent-skiplist/
- - deps/ctrie
-
- - location:
-    git:  https://github.com/iu-parfunc/tslogger.git
+- src/lvish/
+- src/par-classes/
+- src/par-collections/
+- src/par-collections/tests/
+- src/par-mergesort/
+- src/par-transformers/
+- deps/concurrent-skiplist/
+- deps/ctrie/
+- location:
+    git: https://github.com/iu-parfunc/tslogger.git
     commit: bfa8d2b52f0d41439863b15863baa0ca2ef613d9
-    
-# TODO: Revive:
- # - haskell/lvish-apps/
- # - haskell/lvish-apps/cfa/
- # - haskell/lvish-apps/pbbs/
-# - haskell/lvish-graph-algorithms/
- # - haskell/fhpc13-lvars/
- # - haskell/fhpc13-lvars/benchmarks/bf-traverse-LVar/
- # - haskell/fhpc13-lvars/benchmarks/bf-traverse-monad-par/
- # - haskell/fhpc13-lvars/benchmarks/bf-traverse-Strategies/
-
-# TODO: Add:
-# haskell/par-schedulers
- 
+  extra-dep: true
+- ../statefulness
+- ../ohua-core
 extra-deps:
-# Soon:  
-# - tslogger-0.1.0.1
- - atomic-primops-0.8.0.4
- - chaselev-deque-0.5.0.5
- - bits-atomic-0.1.3
- - thread-local-storage-0.1.0.3
- - pcg-random-0.1.3.4
- 
+- chaselev-deque-0.5.0.5
+- pcg-random-0.1.3.4
+- thread-local-storage-0.1.0.3
+#- tslogger-0.2.1.0
+- rdtsc-1.3.0.1
 resolver: lts-6.13
